--- a/index.Rmd
+++ b/index.Rmd
@@ -1,19 +1,21 @@
----
+--- 
 title: "r4ds-ggplot2" 
 knit: "bookdown::render_book"
 output:
-  bookdown::gitbook:
-    number_sections: false
-date: "2023-11-13" 
-link-citations: true
-github-repo: gurinina/genomics/r4ds-ggplot2 
+  bookdown::gitbook: 
+      number_sections: true
+date: "`r Sys.Date()`" 
+link-citations: yes 
+github-repo: gurinina/r4ds-ggplot2 
 url: https\://bookdown.org/ggiaever/r4ds-ggplot2 
 site: bookdown::bookdown_site 
 documentclass: book
 cover-image: "images/koos10.png"
 ---
 
-# Welcome {-}
+
+<link rel="stylesheet" href="css/ggplot.css" type="text/css" />
+# r for data science workshop {-}
 
 This website us the ggplot visulization sections of Hadley Wickham's book [2nd edition of "R for Data Science"](https://r4ds.hadley.nz/).
 
