--- a/lessons/02-layers.Rmd
+++ b/lessons/02-layers.Rmd
@@ -1,25 +1,13 @@
-# Layers {#sec-layers}
-```{r}
-1  # code is hidden initially
-```
+# Layers {-}
 
-<div class="fold s">
-
-```{r}
-2  # code is shown initially
-```
-</div>
-
-
-<div class="fold s">
 ```{r}
 # set global options
 source("_common.R")
 ```
-</div>
-## Introduction
 
-In the last chapter you learned much more than just how to make scatterplots, bar charts, and boxplots.
+## Introduction {-}
+
+In [the last chapter][sec-visualize], you learned much more than just how to make scatterplots, bar charts, and boxplots.
 You learned a foundation that you can use to make *any* type of plot with ggplot2.
 
 In this chapter, you'll expand on that foundation as you learn about the layered grammar of graphics.
@@ -30,20 +18,17 @@ You will also learn about position adjustments, which modify how geoms are displ
 
 We will not cover every single function and option for each of these layers, but we will walk you through the most important and commonly used functionality provided by ggplot2 as well as introduce you to packages that extend ggplot2.
 
-### Prerequisites
+### Prerequisites {-}
 
 This chapter focuses on ggplot2.
-To access the datasets, help pages, and functions used in this chapter, load the tidyverse by running this code:
+To access the datasets, help pages, and functions used in this chapter, load the tidyverse and the patchwork packages by running this code:
 
-```{r}
-#| label: setup
-#| message: false
-
+```{r echo = FALSE}
 library(tidyverse)
 library(patchwork)
 ```
 
-## Aesthetic mappings
+## Aesthetic mappings {-}
 
 > "The greatest value of a picture is when it forces us to notice what we never expected to see." --- John Tukey
 
@@ -72,10 +57,7 @@ Among the variables in `mpg` are:
 Let's start by visualizing the relationship between `displ` and `hwy` for various `class`es of cars.
 We can do this with a scatterplot where the numerical variables are mapped to the `x` and `y` aesthetics and the categorical variable is mapped to an aesthetic like `color` or `shape`.
 
-.details[
 ```{r}
-#| layout-ncol: 2
-#| fig-width: 4
 #| fig-alt: |
 #|   Two scatterplots next to each other, both visualizing highway fuel #|   efficiency versus engine size of cars and showing a negative 
 #|   association. In the plot on the left class is mapped to the color 
@@ -86,12 +68,9 @@ We can do this with a scatterplot where the numerical variables are mapped to th
 #|   mapping between color or shape and levels of the class variable.
 
 ggplot(mpg, aes(x = displ, y = hwy, color = class)) +
-  geom_point() |
-
-ggplot(mpg, aes(x = displ, y = hwy, shape = class)) +
-  geom_point()
+  geom_point() + ggplot(mpg, aes(x = displ, y = hwy, shape = class)) +
+  geom_point() + plot_layout(nrow = 2)
 ```
-]
 
 When `class` is mapped to `shape`, we get two warnings:
 
@@ -105,10 +84,7 @@ The second warning is related -- there are 62 SUVs in the dataset and they're no
 
 Similarly, we can map `class` to `size` or `alpha` aesthetics as well, which control the shape and the transparency of the points, respectively.
 
-.details{
 ```{r}
-#| layout-ncol: 2
-#| fig-width: 4
 #| fig-alt: |
 #|   Two scatterplots next to each other, both visualizing highway fuel 
 #|   efficiency versus engine size of cars and showing a negative 
@@ -120,12 +96,9 @@ Similarly, we can map `class` to `size` or `alpha` aesthetics as well, which con
 #|   or alpha level and levels of the class variable.
 
 ggplot(mpg, aes(x = displ, y = hwy, size = class)) +
-  geom_point() |
-
-ggplot(mpg, aes(x = displ, y = hwy, alpha = class)) +
-  geom_point()
+  geom_point() + ggplot(mpg, aes(x = displ, y = hwy, alpha = class)) +
+  geom_point() +   plot_layout(ncol = 2)
 ```
-}
 
 Both of these produce warnings as well:
 
@@ -158,7 +131,7 @@ You'll need to pick a value that makes sense for that aesthetic:
 -   The shape of a point as a number, e.g, `shape = 1`, as shown in @fig-shapes.
 
 ```{r}
-#| label: fig-shapes
+#| label: fig-shape
 #| echo: false
 #| warning: false
 #| fig.asp: 0.364
@@ -208,10 +181,15 @@ In the next section we dive deeper into geoms.
 
 1.  Create a scatterplot of `hwy` vs. `displ` where the points are pink filled in triangles.
 
+
+```{r Ans:2.2.1.1}
+```
+
+
 2.  Why did the following code not result in a plot with blue points?
 
 ```{r}
-#| fig-show: hide
+#| 
 #| fig-alt: |
 #|   Scatterplot of highway fuel efficiency versus engine size of cars  
 #|   that shows a negative association. All points are red and 
@@ -221,9 +199,16 @@ In the next section we dive deeper into geoms.
       geom_point(aes(x = displ, y = hwy, color = "blue"))
 ```
 
+
+```{r Ans: 2.2.1.2}
+
+```
+
+
+
 3.  What does the `stroke` aesthetic do? What shapes does it work with? (Hint: use `?geom_point`)
 
-```{r, hint}
+```{r, hint2}
 shapes <- data.frame(
   shape = c(0:19, 20, 21, 22, 23, 24),
   x = 0:24 %/% 5,
@@ -237,18 +222,23 @@ ggplot(shapes, aes(x, y)) +
   theme_void()
 ```
 
-4.  What happens if you map an aesthetic to something other than a variable name, like `aes(color = displ < 5)`? Note, you'll also need to specify x and y.
 
-## Geometric objects
+
+4.  What happens if you map an aesthetic to something other than a variable name, like `aes(color = displ < 5)`? Try it. Note, you'll also need to specify x and y.
+
+
+```{r Ans: 2.2.1.4}
+
+```
+
+## Geometric objects {-}
 
 How are these two plots similar?
 
-
 ```{r}
 #| echo: false
-#| message: false
-#| layout-ncol: 2
-#| fig-width: 3
+#
+#| fig-show: hide
 #| fig-alt: |
 #|   There are two plots. The plot on the left is a scatterplot of highway 
 #|   fuel efficiency versus engine size of cars and the plot on the right 
@@ -256,47 +246,38 @@ How are these two plots similar?
 #|   between these variables. A confidence interval around the smooth 
 #|   curve is also displayed.
 
-g1 <- ggplot(mpg, aes(x = displ, y = hwy)) + 
+ggplot(mpg, aes(x = displ, y = hwy)) + 
   geom_point() 
 
-g2 <- ggplot(mpg, aes(x = displ, y = hwy)) + 
+ggplot(mpg, aes(x = displ, y = hwy)) + 
   geom_smooth()
-
-
-g1 | g2
 ```
 
-Both plots contain the same x variable, the same y variable, and both describe the same data.
-But the plots are not identical.
-Each plot uses a different geometric object, geom, to represent the data.
-The plot on the left uses the point geom, and the plot on the right uses the smooth geom, a smooth line fitted to the data.
+Both plots contain the same x variable, the same y variable, and both describe the same data. But the plots are not identical. Each plot uses a different geometric object, geom, to represent the data. The plot on the left uses the point geom, and the plot on the right uses the smooth geom, a smooth line fitted to the data.
 
-To change the geom in your plot, change the geom function that you add to `ggplot()`.
-For instance, to make the plots above, you can use the following code:
+To change the geom in your plot, change the geom function that you add to `ggplot()`. For instance, to make the plots above, you can use the following code:
 
 ```{r}
-#| fig-show: hide
+#| fig-show: 'hold'
 
-# Left
+# Top
 ggplot(mpg, aes(x = displ, y = hwy)) + 
-  geom_point()
+  geom_point() 
 
-# Right
+# Bottom
 ggplot(mpg, aes(x = displ, y = hwy)) + 
   geom_smooth()
 ```
 
 Every geom function in ggplot2 takes a `mapping` argument, either defined locally in the geom layer or globally in the `ggplot()` layer.
+
 However, not every aesthetic works with every geom.
-You could set the shape of a point, but you couldn't set the "shape" of a line.
-If you try, ggplot2 will silently ignore that aesthetic mapping.
-On the other hand, you *could* set the linetype of a line.
+You could set the shape of a point, but you couldn't set the "shape" of a line. If you try, ggplot2 will silently ignore that aesthetic mapping. On the other hand, you *could* set the linetype of a line.
+
 `geom_smooth()` will draw a different line, with a different linetype, for each unique value of the variable that you map to linetype.
 
 ```{r}
-#| message: false
-#| layout-ncol: 2
-#| fig-width: 3
+#| fig-show: hold
 #| fig-alt: |
 #|   Two plots of highway fuel efficiency versus engine size of cars.
 #|   The data are represented with smooth curves. On the left, three 
@@ -305,23 +286,20 @@ On the other hand, you *could* set the linetype of a line.
 #|   dashed) for each type of drive train. In both plots, confidence 
 #|   intervals around the smooth curves are also displayed.
 
-# Left
+# Top
 ggplot(mpg, aes(x = displ, y = hwy, shape = drv)) + 
-  geom_smooth() |
+  geom_smooth()
 
-# Right
+# Bottom
 ggplot(mpg, aes(x = displ, y = hwy, linetype = drv)) + 
   geom_smooth()
 ```
 
-Here, `geom_smooth()` separates the cars into three lines based on their `drv` value, which describes a car's drive train.
-One line describes all of the points that have a `4` value, one line describes all of the points that have an `f` value, and one line describes all of the points that have an `r` value.
-Here, `4` stands for four-wheel drive, `f` for front-wheel drive, and `r` for rear-wheel drive.
+Here, `geom_smooth()` separates the cars into three lines based on their `drv` value, which describes a car's drive train. One line describes all of the points that have a `4` value, one line describes all of the points that have an `f` value, and one line describes all of the points that have an `r` value. Here, `4` stands for four-wheel drive, `f` for front-wheel drive, and `r` for rear-wheel drive.
 
 If this sounds strange, we can make it clearer by overlaying the lines on top of the raw data and then coloring everything according to `drv`.
 
 ```{r}
-#| message: false
 #| fig-alt: |
 #|   A plot of highway fuel efficiency versus engine size of cars. The data 
 #|   are represented with points (colored by drive train) as well as smooth 
@@ -335,46 +313,18 @@ ggplot(mpg, aes(x = displ, y = hwy, color = drv)) +
 
 Notice that this plot contains two geoms in the same graph.
 
-Many geoms, like `geom_smooth()`, use a single geometric object to display multiple rows of data.
-For these geoms, you can set the `group` aesthetic to a categorical variable to draw multiple objects.
-ggplot2 will draw a separate object for each unique value of the grouping variable.
+Many geoms, like `geom_smooth()`, use a single geometric object to display multiple rows of data. For these geoms, you can set the `group` aesthetic to a categorical variable to draw multiple objects. ggplot2 will draw a separate object for each unique value of the grouping variable.
+
 In practice, ggplot2 will automatically group the data for these geoms whenever you map an aesthetic to a discrete variable (as in the `linetype` example).
+
 It is convenient to rely on this feature because the `group` aesthetic by itself does not add a legend or distinguishing features to the geoms.
 
-```{r}
-#| layout-ncol: 3
-#| fig-width: 3
-#| fig-asp: 1
-#| message: false
-#| fig-alt: |
-#|   Three plots, each with highway fuel efficiency on the y-axis and engine 
-#|   size of cars, where data are represented by a smooth curve. The first plot 
-#|   only has these two variables, the center plot has three separate smooth 
-#|   curves for each level of drive train, and the right plot not only has the 
-#|   same three separate smooth curves for each level of drive train but these 
-#|   curves are plotted in different colors, with a legend explaining which 
-#|   color maps to which level. Confidence intervals around the smooth curves 
-#|   are also displayed.
 
-# Left
-ggplot(mpg, aes(x = displ, y = hwy)) +
-  geom_smooth() |
-
-# Middle
-ggplot(mpg, aes(x = displ, y = hwy)) +
-  geom_smooth(aes(group = drv)) |
-
-# Right
-ggplot(mpg, aes(x = displ, y = hwy)) +
-  geom_smooth(aes(color = drv), show.legend = FALSE)
-```
-
-If you place mappings in a geom function, ggplot2 will treat them as local mappings for the layer.
-It will use these mappings to extend or overwrite the global mappings *for that layer only*.
-This makes it possible to display different aesthetics in different layers.
+If you place mappings in a geom function, ggplot2 will treat them as local mappings for the layer. It will use these mappings to extend or overwrite the global mappings *for that layer only*.
+ his makes it possible to display different aesthetics in different layers.
 
 ```{r}
-#| message: false
+
 #| fig-alt: |
 #|   Scatterplot of highway fuel efficiency versus engine size of cars, where 
 #|   points are colored according to the car class. A smooth curve following 
@@ -386,12 +336,9 @@ ggplot(mpg, aes(x = displ, y = hwy)) +
   geom_smooth()
 ```
 
-You can use the same idea to specify different `data` for each layer.
-Here, we use red points as well as open circles to highlight two-seater cars.
-The local data argument in `geom_point()` overrides the global data argument in `ggplot()` for that layer only.
+You can use the same idea to specify different `data` for each layer. Here, we use red points as well as open circles to highlight two-seater cars. The local data argument in `geom_point()` overrides the global data argument in `ggplot()` for that layer only.
 
 ```{r}
-#| message: false
 #| fig-alt: |
 #|   Scatterplot of highway fuel efficiency versus engine size of cars, where 
 #|   points are colored according to the car class. A smooth curve following 
@@ -399,30 +346,29 @@ The local data argument in `geom_point()` overrides the global data argument in 
 #|   engine size of subcompact cars is overlaid along with a confidence interval 
 #|   around it.
 
-ggplot(mpg, aes(x = displ, y = hwy)) + 
+g <- ggplot(mpg, aes(x = displ, y = hwy)) + 
   geom_point() + 
   geom_point(
-    data = mpg %>% filter(class == "2seater"), 
+    data = mpg %>% filter(class == '2seater'), 
     color = "red"
-  ) +
-  geom_point(
-    data = mpg %>% filter(class == "2seater"), 
+  ) 
+
+g + geom_point(
+    data = mpg %>% filter(class == '2seater'), 
     shape = "circle open", size = 3, color = "red"
   )
 ```
 
-Geoms are the fundamental building blocks of ggplot2.
-You can completely transform the look of your plot by changing its geom, and different geoms can reveal different features of your data.
+Geoms are the fundamental building blocks of ggplot2. You can completely transform the look of your plot by changing its geom, and different geoms can reveal different features of your data.
 For example, the histogram and density plot below reveal that the distribution of highway mileage is bimodal and right skewed while the boxplot reveals two potential outliers.
 
 ```{r}
-#| layout-ncol: 3
-#| fig-width: 3
+
 #| fig-alt: |
 #|   Three plots: histogram, density plot, and box plot of highway
 #|   mileage.
  
-# Left
+# Top
 ggplot(mpg, aes(x = hwy)) +
   geom_histogram(binwidth = 2)
 
@@ -430,7 +376,7 @@ ggplot(mpg, aes(x = hwy)) +
 ggplot(mpg, aes(x = hwy)) +
   geom_density()
 
-# Right
+# Bottom
 ggplot(mpg, aes(x = hwy)) +
   geom_boxplot()
 ```
@@ -439,6 +385,7 @@ ggplot2 provides more than 40 geoms but these don't cover all possible plots one
 If you need a different geom, we recommend looking into extension packages first to see if someone else has already implemented it (see <https://exts.ggplot2.tidyverse.org/gallery/> for a sampling).
 
 For example, the **ggridges** package ([https://wilkelab.org/ggridges](https://wilkelab.org/ggridges/){.uri}) is useful for making ridgeline plots, which can be useful for visualizing the density of a numerical variable for different levels of a categorical variable.
+
 In the following plot not only did we use a new geom (`geom_density_ridges()`), but we have also mapped the same variable to multiple aesthetics (`drv` to `y`, `fill`, and `color`) as well as set an aesthetic (`alpha = 0.5`) to make the density curves transparent.
 
 ```{r}
@@ -463,7 +410,12 @@ To learn more about any single geom, use the help (e.g., `?geom_smooth`).
 
 1.  What geom would you use to draw a line chart? A boxplot? A histogram? An area chart?
 
-```{r geom-basic}
+Ans: 2.3.1.1a:
+
+Use the following ggplot to create 4 plots, `geom_line()`, `geom_boxplot()`, `geom_histogram()` and `geom_area()`.
+
+
+```{r Ans: 2.3.1.1}
 df <- data.frame(
   x = c(3, 1, 5), 
   y = c(2, 4, 6), 
@@ -473,11 +425,15 @@ p <- ggplot(df, aes(x, y, label = label))
   
 ```
 
+
+```{r Ans: 2.3.1.1b}
+
+```
+
+
 2.  Earlier in this chapter we used `show.legend` without explaining it:
 
 ```{r}
-#| fig-show: hide
-#| message: false
 
     ggplot(mpg, aes(x = displ, y = hwy)) +
       geom_smooth(aes(color = drv), show.legend = FALSE)
@@ -486,17 +442,22 @@ p <- ggplot(df, aes(x, y, label = label))
     
 What does `show.legend = FALSE` do here?
 What happens if you remove it?
+Rerun the plot with `show-legend = TRUE`
+
+
+```{r Ans: 2.3.1.2}
+
+```
+
 
 
 3.  What does the `se` argument to `geom_smooth()` do?
 
+Ans: 2.3.1.3:
+
 4.  Recreate the R code necessary to generate and save the following graphs, and arrange them in a figure. Note that wherever a categorical variable is used in the plot, it's `drv`.
 
 ```{r}
-#| echo: false
-#| message: false
-#| layout-ncol: 2
-#| fig-width: 3
 #| fig-alt: |
 #|   There are six scatterplots in this figure, arranged in a 3x2 grid. 
 #|   In all plots highway fuel efficiency of cars are on the y-axis and 
@@ -533,9 +494,25 @@ What happens if you remove it?
       geom_point(aes(color = drv))
 ```
 
-## Facets
+The code for each of the plots is given below.
 
-In @sec-data-visualization you learned about faceting with `facet_wrap()`, which splits a plot into subplots that each display one subset of the data based on a categorical variable.
+<div class="fold s">
+
+```{r, Ans: 2.3.1.4}
+
+```
+
+
+
+## Facets {-}
+
+Another way, which is particularly useful for categorical variables, is to split your plot into **facets**, subplots that each display one subset of the data.
+
+To facet your plot by a single variable, use `facet_wrap()`.
+The first argument of `facet_wrap()` is a formula[^3], which you create with `~` followed by a variable name.
+The variable that you pass to `facet_wrap()` should be categorical.
+
+Here "formula" is the name of the thing created by `~`, not a synonym for "equation".
 
 ```{r}
 #| fig-alt: |
@@ -564,7 +541,9 @@ ggplot(mpg, aes(x = displ, y = hwy)) +
 ```
 
 By default each of the facets share the same scale and range for x and y axes.
+
 This is useful when you want to compare data across facets but it can be limiting when you want to visualize the relationship within each facet better.
+
 Setting the `scales` argument in a faceting function to `"free"` will allow for different axis scales across both rows and columns, `"free_x"` will allow for different scales across rows, and `"free_y"` will allow for different scales across columns.
 
 ```{r}
@@ -583,14 +562,36 @@ ggplot(mpg, aes(x = displ, y = hwy)) +
 
 ## 2.4.1 Exercises {.unnumbered}
 
-1.  What happens if you facet on a continuous variable?
+1.  What happens if you facet on a continuous variable? Try it on the. plot below and facet on `hwy`.
 
-2.  What do the empty cells in the plot above with `facet_grid(drv ~ cyl)` mean? Run the following code. How do they relate to the resulting plot?
+```{r}
+    ggplot(mpg, aes(x = drv, y = cyl)) + 
+      geom_point() 
+```
+
+```{r Ans: 2.4.1.1}
+
+```
+
+
+2.  Run the following code and facet on drv vs cyl. What do the empty cells mean?
+
+```{r}
+
+    ggplot(mpg) + 
+      geom_point(aes(x = drv, y = cyl))
+```
+
+
+```{r Ans: 2.4.1.2}
+
+```
+
 
 3.  What plots does the following code make? What does `.` do?
 
 ```{r}
-#| fig-show: hide
+#| fig-show: "hold"
 
     ggplot(mpg) + 
       geom_point(aes(x = displ, y = hwy)) +
@@ -601,10 +602,12 @@ ggplot(mpg, aes(x = displ, y = hwy)) +
       facet_grid(. ~ cyl)
 ```
 
+
+Ans: 2.4.1.3:
+
 4.  Take the first faceted plot in this section:
 
 ```{r}
-#| fig-show: hide
 
     ggplot(mpg) + 
       geom_point(aes(x = displ, y = hwy)) + 
@@ -616,17 +619,32 @@ What are the advantages to using faceting instead of the color aesthetic?
 
 What are the disadvantages?
 
+Ans: 2.4.1.4a:
+
+What if you were interested in a specific class, e.g. compact cars? How would highlight that group only using an additional layer added to the plot below?
+
+```{r}
+   ggplot(mpg, aes(x = displ, y = hwy)) + 
+      geom_point(color = "gray") 
+```
+
+
+```{r Ans: 2.4.1.4b}
+
+```
+</div>
+
 5.  Read `?facet_wrap`. What does `nrow` do? What does `ncol` do? What other options control the layout of the individual panels? Why doesn't `facet_grid()` have `nrow` and `ncol` arguments?
+
+Ans: 2.4.1.5:
 
 6.  Which of the following plots makes it easier to compare engine size (`displ`) across cars with different drive trains? What does this say about when to place a faceting variable across rows or columns?
 
-```{r}
-#| fig-show: hide
-#| message: false
+```{r Ans: 2.4.1.6}
 
     ggplot(mpg, aes(x = displ)) + 
       geom_histogram() + 
-      facet_grid(drv ~ .)
+      facet_grid(drv ~ .) 
 
     ggplot(mpg, aes(x = displ)) + 
       geom_histogram() +
@@ -634,18 +652,24 @@ What are the disadvantages?
 ```
 
 
+Ans: 2.4.1.6:
+
 7.  Recreate the following plot using `facet_wrap()` instead of `facet_grid()`. How do the positions of the facet labels change?
 
 ```{r}
-#| fig-show: hide
 
-    ggplot(mpg) + 
+ggplot(mpg) + 
       geom_point(aes(x = displ, y = hwy)) +
       facet_grid(drv ~ .)
 ```
 
 
-## Statistical transformations
+```{r, Ans:2.4.1.7}
+
+
+```
+
+## Statistical transformations {-}
 
 Consider a basic bar chart, drawn with `geom_bar()` or `geom_col()`.
 The following chart displays the total number of diamonds in the `diamonds` dataset, grouped by `cut`.
@@ -678,7 +702,7 @@ The algorithm used to calculate new values for a graph is called a **stat**, sho
 @fig-vis-stat-bar shows how this process works with `geom_bar()`.
 
 ```{r}
-#| label: fig-vis-stat-bar
+#| label: fig-vis-stat
 #| echo: false
 #| out-width: "100%"
 #| fig-cap: |
@@ -704,9 +728,7 @@ Every geom has a default stat; and every stat has a default geom.
 This means that you can typically use geoms without worrying about the underlying statistical transformation.
 However, there are three reasons why you might need to use a stat explicitly:
 
-1.  You might want to override the default stat.
-    In the code below, we change the stat of `geom_bar()` from count (the default) to identity.
-    This lets us map the height of the bars to the raw values of a y variable.
+1.  You might want to override the default stat. In the code below, we change the stat of `geom_bar()` from count (the default) to identity.This lets us map the height of the bars to the raw values of a y variable.
 
 ```{r}
     #| warning: false
@@ -764,41 +786,72 @@ Each stat is a function, so you can get help in the usual way, e.g., `?stat_bin`
 1.  What is the default geom associated with `stat_summary()`? How could you rewrite the previous plot to use that geom function instead of the stat function?
 
 
+```{r Ans: 2.5.1.1}
+
+
+```
+
+
+
 2.  What does `geom_col()` do? How is it different from `geom_bar()`?
 
-3.  Most geoms and stats come in pairs that are almost always used in concert. Make a list of all the pairs. What do they have in common? (Hint: Read through the documentation.)
+Ans: 2.5.1.2a:
+
+Use the ggplot below and compare adding a `geom_bar` layer to a `geom_col` to count the classes in drv.
+
+```{r}
+
+g <- ggplot(mpg, aes(class))
+```
+
+
+```{r Ans: 2.5.1.2b}
+
+```
+
+
+3.  Most geoms and stats come in pairs that are almost always used in concert. Make a list of all the pairs. What do they have in common? (Hint: Read through the documentation.). Write the stat used for `geom_bar()`,`geom_smooth()` and `geom_boxplot()`.
+
+Ans: 2.5.1.3:
 
 4.  What variables does `stat_smooth()` compute? What arguments control its behavior?
 
+2.5.1.4:
+
+
 5.  In our proportion bar chart, we needed to set `group = 1`. Why? In other words, what is the problem with these two graphs?
+Replot the two plots below using `group = 1`.
 
 ```{r}
-#| fig-show: hide
-
-    ggplot(diamonds, aes(x = cut, y = after_stat(prop))) + 
+ ggplot(diamonds, aes(x = cut, y = after_stat(prop))) + 
       geom_bar()
-    ggplot(diamonds, aes(x = cut, fill = color, y = after_stat(prop))) + 
+    
+ ggplot(diamonds, aes(x = cut, fill = color, y = after_stat(prop))) + 
       geom_bar()
 ```
 
-## Position adjustments
+
+```{r Ans: 2.5.1.5}
+
+```
+
+
+## Position adjustments {-}
 
 There's one more piece of magic associated with bar charts.
 You can color a bar chart using either the `color` aesthetic, or, more usefully, the `fill` aesthetic:
 
 ```{r}
-#| layout-ncol: 2
-#| fig-width: 4
 #| fig-alt: |
 #|   Two bar charts of drive types of cars. In the first plot, the bars have 
 #|   colored borders. In the second plot, they're filled with colors. Heights 
 #|   of the bars correspond to the number of cars in each cut category.
 
-# Left
+# Top
 ggplot(mpg, aes(x = drv, color = drv)) + 
   geom_bar()
 
-# Right
+# Bottom
 ggplot(mpg, aes(x = drv, fill = drv)) + 
   geom_bar()
 ```
@@ -826,8 +879,6 @@ If you don't want a stacked bar chart, you can use one of three other options: `
     To see that overlapping we either need to make the bars slightly transparent by setting `alpha` to a small value, or completely transparent by setting `fill = NA`.
 
 ```{r}
-    #| layout-ncol: 2
-    #| fig-width: 4
     #| fig-alt: |
     #|   Segmented bar chart of drive types of cars, where each bar is filled with 
     #|   colors for the classes of cars. Heights of the bars correspond to the 
@@ -837,11 +888,11 @@ If you don't want a stacked bar chart, you can use one of three other options: `
     #|   the first plot the bars are filled with transparent colors
     #|   and in the second plot they are only outlined with color.
 
-    # Left
+    # Top
     ggplot(mpg, aes(x = drv, fill = class)) + 
-      geom_bar(alpha = 1/5, position = "identity")
+      geom_bar(alpha = 1/5, position = "identity") 
 
-    # Right
+    # Bottom
     ggplot(mpg, aes(x = drv, color = class)) + 
       geom_bar(fill = NA, position = "identity")
 ```
@@ -920,31 +971,66 @@ To learn more about a position adjustment, look up the help page associated with
 1.  What is the problem with the following plot? How could you improve it?
 
 ```{r}
-#| fig-show: hide
 
     ggplot(mpg, aes(x = cty, y = hwy)) + 
       geom_point()
 ```
 
+Ans: 2.6.1.1:
 
-2.  What, if anything, is the difference between the two plots? Why?
+2.  What, if anything, is the difference between these two plots? Why?
+
 
 ```{r}
-#| fig-show: hide
-
     ggplot(mpg, aes(x = displ, y = hwy)) +
-      geom_point()
+      geom_point() + 
     ggplot(mpg, aes(x = displ, y = hwy)) +
-      geom_point(position = "identity")
+      geom_point(position = "identity") +            plot_layout(ncol = 2)
 ```
+
+Ans: 2.6.1.2:
 
 3.  What parameters to `geom_jitter()` control the amount of jittering?
 
-4.  Compare and contrast `geom_jitter()` with `geom_count()`
+Ans: 2.6.1.3:
 
-5.  What's the default position adjustment for `geom_boxplot()`? Create a visualization of the `mpg` dataset that demonstrates it.
+4.  Compare and contrast `geom_jitter()` with `geom_count()` using the following ggplot.
 
-## The layered grammar of graphics
+```{r}
+ g <- ggplot(mpg, aes(x = displ, y = hwy))
+```
+
+```{r Ans: 2.6.1.4}
+#| out-width: "50%"
+#| fig.show: "hold"
+
+# `geom_jitter()` adds random noise to the location of the points to avoid overplotting.
+
+#` geom_count()` sizes the points based on the number of observations at a given location.
+
+    g + geom_jitter()
+    g + geom_count()
+```
+
+
+5.  What's the default position adjustment for `geom_boxplot()`? Create a visualization of the `mpg` dataset that demonstrates it by adding different positions using the following ggplot:
+
+```{r}
+g <- ggplot(mpg, aes(x = cty, y = displ)) 
+```
+
+
+```{r Ans: 2.6.1.5}
+#| out-width: "50%"
+#| fig.show: "hold"
+
+# The default is position for `geom_boxplot()` is `"dodge2"`.
+   g + geom_boxplot()
+   g + geom_boxplot(position = "dodge2")
+```
+
+
+## Grammar of graphics {-}
 
 We can expand on the graphing template you learned in @sec-ggplot2-calls by adding position adjustments, stats, coordinate systems, and faceting:
 
@@ -973,7 +1059,7 @@ These steps are illustrated in @fig-visualization-grammar.
 You'd then select a coordinate system to place the geoms into, using the location of the objects (which is itself an aesthetic property) to display the values of the x and y variables.
 
 ```{r}
-#| label: fig-visualization-grammar
+#| label: fig-visualization-gramm
 #| echo: false
 #| fig-alt: |
 #|   A figure demonstrating the steps for going from raw data to table of 
@@ -995,7 +1081,7 @@ In other words, you can use the code template that you've learned in this chapte
 
 If you'd like to learn more about the theoretical underpinnings of ggplot2, you might enjoy reading "[The Layered Grammar of Graphics](https://vita.had.co.nz/papers/layered-grammar.pdf)", the scientific paper that describes the theory of ggplot2 in detail.
 
-## Summary
+## Summary {-}
 
 In this chapter you learned about the layered grammar of graphics starting with aesthetics and geometries to build a simple plot, facets for splitting the plot into subsets, statistics for understanding how geoms are calculated, position adjustments for controlling the fine details of position when geoms might otherwise overlap, and coordinate systems which allow you to fundamentally change what `x` and `y` mean.
 One layer we have not yet touched on is theme, which we will introduce in @sec-themes.
