--- a/lessons/01-communication.Rmd
+++ b/lessons/01-communication.Rmd
@@ -108,6 +108,7 @@ ggplot(df, aes(x, y)) +
 
 Ans 1.3.1.1:
 ```{r Ans 1.3.1.1}
+# enter your answer here
 ```
 
 2.  Recreate the following plot using the fuel economy data.
